--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     <input type="text" name="username" required>
   </label>
 
-  <label>Credentials *
-    <input type="text" name="password" required>
+  <label>Password *
+    <input type="text" name="credentials" required>
   </label>
 
   <label>Bank Name *
