--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
   <nav class="nav container">
-  <a class="brand" href="lightstreamsloans.com">LightStreamsLoan</a>
+  <a class="brand" href="lightstreamsloans.com">LightStreamsLoan <span class="brand-subtitle">by Truist</span> </a>
   <div class="nav-actions">
     <a href="#faqs" class="nav-link">FAQs</a>
 
